--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -35,12 +35,12 @@
     <!-- Content -->
     <FrameLayout
         android:id="@+id/settings"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_height="match_parent" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <!-- Toolbar shadow -->
     <View
