--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -41,11 +41,11 @@
         <item>10초</item>
     </string-array>
 
-    <integer-array name="standing_duration_values">
+    <string-array name="standing_duration_values">
         <item>2000</item>
         <item>5000</item>
         <item>10000</item>
-    </integer-array>
+    </string-array>
 
     <string-array name="walking_duration_entries">
         <item>2초</item>
@@ -55,12 +55,12 @@
         <item>3분</item>
     </string-array>
 
-    <integer-array name="walking_duration_values">
+    <string-array name="walking_duration_values">
         <item>2000</item>
         <item>30000</item>
         <item>60000</item>
         <item>120000</item>
         <item>180000</item>
-    </integer-array>
+    </string-array>
 
 </resources>
