--- a/app/src/main/res/layout/report_detail_lower_part.xml
+++ b/app/src/main/res/layout/report_detail_lower_part.xml
@@ -89,7 +89,7 @@
                         android:id="@+id/horizontal_balance"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@{vm.score}"
+                        android:text="@{vm.score + '%'}"
                         tools:text="44%"/>
 
                     <!-- Label -->
