--- a/app/src/main/res/layout/report_detail_upper_part.xml
+++ b/app/src/main/res/layout/report_detail_upper_part.xml
@@ -125,7 +125,7 @@
         <LinearLayout
             android:padding="12dp"
             android:id="@+id/estimation_group"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center_horizontal"
@@ -141,26 +141,24 @@
                 android:text="@string/title_medical_prediction" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_weight="1"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:src="@{vm.medicalPredictionDrawable}"
                     android:tint="?android:attr/colorPrimary"
                     tools:src="@drawable/ic_disease_0"/>
 
                 <TextView
                     style="@style/TextPrimary"
-                    android:layout_weight="1"
                     android:layout_gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@{vm.medicalPredictionName}"
-                    tools:text="연골 연화증"/>
+                    tools:text="개발자가정신이없군"/>
 
             </LinearLayout>
 
