--- a/app/src/main/res/layout/report_detail_upper_part.xml
+++ b/app/src/main/res/layout/report_detail_upper_part.xml
@@ -158,7 +158,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@{vm.medicalPredictionName}"
-                    tools:text="개발자가정신이없군"/>
+                    tools:text="굿"/>
 
             </LinearLayout>
 
