Add support for day theme.
Use LightSplashTheme when using day mode.

--- a/app/src/main/res/layout/realtime_view_section.xml
+++ b/app/src/main/res/layout/realtime_view_section.xml
@@ -30,6 +30,8 @@
     </data>
 
     <LinearLayout
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
