--- a/app/src/main/res/layout/diagnose_fragment.xml
+++ b/app/src/main/res/layout/diagnose_fragment.xml
@@ -32,10 +32,11 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingBottom="32dp"
+            android:clipToPadding="false"
+            android:clipChildren="false">
 
             <include
                 layout="@layout/unified_diagnosis_section"
