--- a/app/src/main/res/layout/unified_diagnosis_section.xml
+++ b/app/src/main/res/layout/unified_diagnosis_section.xml
@@ -28,6 +28,8 @@
     </data>
     
     <androidx.cardview.widget.CardView
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginTop="24dp"
         style="@style/SectionCard">
 
